Fixed an alignment error on mobile

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ p {
     transform: translate(-50%, -50%);
     font-size: small;
     text-shadow: 0px 1px 24px rgb(0, 0, 0, 1);
+    line-height: 150%;
 }
 
 .image-container {
@@ -87,6 +88,10 @@ p {
     margin: auto;
     flex-wrap: wrap;
 }
+
+/* .links a {
+    margin-right: 10px;
+} */
 
 .middle-links {
     display: flex;
@@ -130,7 +135,6 @@ a {
     /* border: 1px solid black; */
     border-radius: 4px;
 
-    margin-right: 10px;
     padding: 0px 8px;
 }
 
@@ -217,11 +221,11 @@ a:hover {
 
     .headline-block .caption {
         position: absolute;
-        width: 100%;
-        top: 90%;
+        width: 90%;
+        top: 85%;
         left: 50%;
         transform: translate(-50%, -50%);
-        font-size: 0.8em;
+        font-size: 0.7em;
     }
 
     .text {
